--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Environment variables
 .env
 
+
 # Python
 __pycache__/
 *.py[cod]
@@ -10,6 +11,7 @@ __pycache__/
 venv/
 env/
 ENV/
+.reel/
 
 # Temporary storage
 temp_storage/
