added agentic changes

--- a/requirements.txt
+++ b/requirements.txt
@@ -40,3 +40,9 @@ aiofiles>=23.2.0  # For async file operations
 streamlit>=1.39.0
 python-dotenv
 
+# LangGraph for Agent Flow
+langgraph>=0.2.0
+langchain>=0.3.0
+langchain-core>=0.3.0
+langchain-google-genai>=2.0.0
+
